enables render to user/edit forms, also fixes bug where avatar file input overflowed from form

--- a/app/assets/stylesheets/hidden_form.css.scss
+++ b/app/assets/stylesheets/hidden_form.css.scss
@@ -73,6 +73,10 @@
 	cursor: pointer;
 }
 
+.hidden-form input[type="file"] {
+	max-width: 260px;
+}
+
 .logout {
 	width: 279px;
 	margin: -10px;
