--- a/app/assets/stylesheets/users/edit.css.scss
+++ b/app/assets/stylesheets/users/edit.css.scss
@@ -1,10 +1,10 @@
-#user-information {
+#account-settings {
 	float: left;
 	margin: 0 25px;
 	width: 428px;
 }
 
-#user-information h2 {	
+#account-settings h2 {	
 	font-weight: bold;
 	font-size: 105%;
 	width: 100%;
@@ -13,7 +13,7 @@
 	color: #484848;
 }
 
-#user-information > ul > li {
+#account-settings > ul > li {
 	border-radius: 3px;
 	margin-top: 8px;
 	padding: 13px;
@@ -21,7 +21,7 @@
 	color: #484848;
 }
 
-#user-information > ul > li:hover {
+#account-settings > ul > li:hover {
 	cursor: pointer;
 	background-color: #dcdcdc;
 	color: #111111;
